<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AiLogic">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="482dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/grid_dis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="72dp"
        android:paddingLeft="40dp"
        android:paddingRight="20dp"
        android:text="@string/heading"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="0" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_marginBottom="-25sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="45sp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="45sp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/images"
                android:onClick="logic"
                android:tag="8" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/bottom"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>